[workspace]
resolver = "2"
members = [
    "crates/anha-core",
]

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
sha2       = "0.10"
hex        = "0.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ANHA Protocol Initiative"]

[workspace.lints.clippy]
all             = { level = "warn", priority = -1 }
type_complexity = "allow"
