[package]
name = "anha-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for the AI Namespace & @ai Handle Architecture (ANHA)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
